--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "next": "15.3.3",
+    "openai": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
